log
Wed 13 Mar 2024 04:48:26 PM UTC: 
 tests:  0|5
total_score: 0/70
5e0b5ce
Wed 13 Mar 2024 07:31:37 PM UTC: 
 exercises.c | 30 ++++++++++++++----------------
 1 file changed, 14 insertions(+), 16 deletions(-)
 tests:  0|5
total_score: 0/70
a08b177
Wed 13 Mar 2024 07:32:16 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
a09fa1e
Wed 13 Mar 2024 07:33:02 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
7137ff8
Wed 13 Mar 2024 07:33:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a198402
Wed 13 Mar 2024 07:35:00 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
10192d6
Wed 13 Mar 2024 07:36:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
df31381
Wed 13 Mar 2024 07:37:31 PM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
181df7a
Wed 13 Mar 2024 07:41:44 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
296f946
Fri 15 Mar 2024 05:01:33 PM UTC: 
 tests:  2|3
total_score: 20/70
7293553
Fri 15 Mar 2024 05:04:17 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
6233b1b
Fri 15 Mar 2024 05:11:41 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:106:10: error: unused variable ‘pilaAux’ [-Werror=unused-variable]
  106 |   Stack *pilaAux = create_stack();
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3b55b64
Fri 15 Mar 2024 05:11:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
cb6a2d1
Fri 15 Mar 2024 05:12:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
af4b899
Fri 15 Mar 2024 05:12:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
650a559
